# exert-elements

./: readme.md
cmfcdemo/: CMakeLists.txt  CMakeSettings.json
cmfcdemo/baredemo/: CMakeLists.txt
cmfcdemo/baredemo/src/: main.cpp
cmfcdemo/baredemo/src/view/: main_app.cpp
cmfcdemo/customdemo/: CMakeLists.txt
cmfcdemo/customdemo/src/: main.cpp
elementsdemo/baredemo/cmake/: ExertDepRes.cmake
